--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,7 +21,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.0.0",
     "selfsigned": "^5.5.0",
     "socket.io": "^4.7.2"
   },
