--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,11 @@
 NODE_ENV=development
 PORT=5443
+HTTP_PORT=5000
 MONGODB_URI=mongodb://localhost:27017/study-group
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 CLIENT_URL=http://localhost:3000
-OPENAI_API_KEY=" flkajsl"
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_MODEL=gpt-4o-mini
 # File upload settings
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
